<resources>
    <string name="app_name">Git-Notebook</string>
    <string name="description">This app features the most important and commonly used Git commands for easy reference.</string>
    //DrawerLayout Strings
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="main_description">Git is the open source distributed version control system that facilitates GitHub activities on your laptop or
desktop.</string>

    <string name="install_text_help">INSTALL GIT
GitHub provides desktop clients that include a graphical user
interface for the most common repository actions and an automatically
updating command line edition of Git for advanced scenarios.
GitHub for Windows
https://windows.github.com
GitHub for Mac
https://mac.github.com
Git distributions for Linux and POSIX systems are available on the
official Git SCM web site.
Git for All Platforms
http://git-scm.com</string>

    <string name="menu_home">Git</string>
    <string name="menu_basics">Basics of Git</string>
    <string name="menu_reset">Reset the files</string>
    <string name="menu_review">Review history</string>
    <string name="menu_branching">Branching</string>
    <string name="menu_sync">Synchronize changes</string>
    <string name="menu_fragments">Save fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="git_intro">Git is a version-control system for tracking changes in computer files and coordinating work on those files among multiple people. It is primarily used for source-code management in software development,but it can be used to keep track of changes in any set of files. As a distributed revision-control system, it is aimed at speed, data integrity, and support for distributed, non-linear workflows.

Git was created by Linus Torvalds in 2005 for development of the Linux kernel, with other kernel developers contributing to its initial development. Its current maintainer since 2005 is Junio Hamano.

As with most other distributed version-control systems, and unlike most client–server systems, every Git directory on every computer is a full-fledged repository with complete history and full version-tracking abilities, independent of network access or a central server.</string>


</resources>
